Added Call Congress Now icon to portfolio

--- a/index.html
+++ b/index.html
@@ -26,7 +26,25 @@
 
     <section class="portfolio-row" id="portfolio">
         <button class="portfolio-icon">
-            <img class="portfolio-icon-image" src="images/call-congress-now-preview.png" alt="mockup: school landing page" />
+            <img class="portfolio-icon-image" src="images/call-congress-now.svg" alt="call congress now icon" />
+            <h2 class="portfolio-icon-title">Icon:<br>Call Congress Now</h2>
+        </button>
+        <div class="portfolio-modal">
+            <div class="portfolio-modal-content">
+                <div class="portfolio-modal-header">
+                    <h3>Call Congress Now</h3>
+                    <span class="portfolio-modal-close-icon">&times;</span>
+                </div>
+                <div class="portfolio-modal-body">
+                    <img class="portfolio-modal-gif" src="images/call-congress-now.svg" alt="call congress now icon" />
+                    <p class="portfolio-modal-paragraph">Call Congress Now is a responsive web app I designed and co-developed. The purpose of the application is to encourage citizens to call their Representatives and Senators by providing calling information in a user-friendly way.</p>
+                    <p class="portfolio-modal-paragraph">The icon I created for Call Congress Now was inspired by the upside down flag on House of Cards.</p>
+                    <a class="portfolio-modal-link" href="https://www.callcongressnow.org/">Visit Website</a>
+                 </div>
+            </div>
+        </div>
+        <button class="portfolio-icon">
+            <img class="portfolio-icon-image" src="images/call-congress-now-preview.png" alt="call congress now preview" />
             <h2 class="portfolio-icon-title">From idea to live app:<br>Call Congress Now</h2>
         </button>
         <div class="portfolio-modal">
@@ -36,7 +54,7 @@
                     <span class="portfolio-modal-close-icon">&times;</span>
                 </div>
                 <div class="portfolio-modal-body">
-                    <img class="portfolio-modal-gif" src="images/ccn-prototype-preview.gif" alt="school landing page mockup preview" />
+                    <img class="portfolio-modal-gif" src="images/ccn-prototype-preview.gif" alt="call congress now website" />
                     <p class="portfolio-modal-paragraph">Call Congress Now is a responsive web app I designed and co-developed. The purpose of the application is to encourage citizens to call their Representatives and Senators by providing calling information in a user-friendly way.</p>
                     <p class="portfolio-modal-paragraph">The finished product followed a series of low-fidelity paper &amp; pencil mockups, a high-fidelity mockup created in Adobe Illustrator, and an HTML/CSS prototype. This is an ongoing project that continues to evolve.</p>
                     <a class="portfolio-modal-link" href="https://www.callcongressnow.org/">Visit Website</a>
