First draft of design process

--- a/ccn.html
+++ b/ccn.html
@@ -29,21 +29,58 @@
     <section class="portfolio-ccn-body">
         <h2 class="portfolio-ccn-title">Call Congress Now: From idea to web application</h2>
         <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-header">Overview</h3>
-            <p class="portfolio-ccn-blurb">Call Congress Now is a responsive web app I designed and co-developed. The purpose of the application is to encourage citizens to call their Representatives and Senators by providing calling information in a user-friendly way. </p>
+            <h3 class="portfolio-ccn-intro-header">Overview</h3>
+            <p class="portfolio-ccn-intro-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way. </p>
         </div>
         <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-header">The Challenge</h3>
-            <p class="portfolio-ccn-blurb">In the weeks following America&rsquo;s 2016 election night, I made a vow to get more politically involved. I read through tweets about the impact of picking up the phone and dialing Senators and Representatives. My friend and I were intrigued. We started looking into how to contact Congress, and we were startled by how little information about it existed. Then we realized that we could do something about it.</p>
+            <h3 class="portfolio-ccn-intro-header">The Design Process</h3>
+            <p class="portfolio-ccn-intro-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have outlined my design process below.</p>
         </div>
         <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-header">The Solution</h3>
-            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would be create a user-friendly way to call members of Congress? How do we motivate our peers to pick up the phone?</p>
+            <div class="portfolio-ccn-column">
+                <h3 class="portfolio-ccn-header">Discovery</h3>
+                <img class="portfolio-ccn-design-img" src="images/design-discover.png" alt="discovery" />
+            </div>
+            <div class="portfolio-ccn-column">
+                <p class="portfolio-ccn-blurb">In the weeks following election night, I vowed to get more involved in politics. As I talked with like-minded peers and nodded along as I read rant-filled threads, I started wondering what else I could do besides make sure my friends and family voted in the next election.</p>
+                <p class="portfolio-ccn-blurb">I came across long Twitter threads about the impact of picking up the phone and calling Congress. My friend and I were intrigued. We started looking into how to contact Congress, and we were startled by how little information about it existed. Then we realized that we could do something about that.</p>
+            </div>
         </div>
         <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-header">The Design Process</h3>
-            <h4 class="portfolio-ccn-process-header">Ideation</h4>
-            <p class="portfolio-ccn-blurb"></p>
+            <div class="portfolio-ccn-column">
+                <h3 class="portfolio-ccn-header">Ideation</h3>
+                <img class="portfolio-ccn-design-img" src="images/design-ideate.png" alt="discovery" />
+            </div>
+            <div class="portfolio-ccn-column">
+            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
+            </div>
+        </div>
+        <div class="portfolio-ccn-row">
+            <div class="portfolio-ccn-column">
+                <h3 class="portfolio-ccn-header">Design</h3>
+                <img class="portfolio-ccn-design-img" src="images/design-design.png" alt="discovery" />
+            </div>
+            <div class="portfolio-ccn-column">
+            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
+            </div>
+        </div>
+        <div class="portfolio-ccn-row">
+            <div class="portfolio-ccn-column">
+                <h3 class="portfolio-ccn-header">Develop</h3>
+                <img class="portfolio-ccn-design-img" src="images/design-develop.png" alt="discovery" />
+            </div>
+            <div class="portfolio-ccn-column">
+            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
+            </div>
+        </div>
+        <div class="portfolio-ccn-row">
+            <div class="portfolio-ccn-column">
+                <h3 class="portfolio-ccn-header">Test</h3>
+                <img class="portfolio-ccn-design-img" src="images/design-test.png" alt="discovery" />
+            </div>
+            <div class="portfolio-ccn-column">
+            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
+            </div>
         </div>
 
     </section>
