Added process page; general layout setup

--- a/ccn.html
+++ b/ccn.html
@@ -42,8 +42,8 @@
                 <img class="portfolio-ccn-design-img" src="images/design-discover.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
-                <p class="portfolio-ccn-blurb">In the weeks following election night, I vowed to get more involved in politics. As I talked with like-minded peers and nodded along as I read rant-filled threads, I started wondering what else I could do besides make sure my friends and family voted in the next election.</p>
-                <p class="portfolio-ccn-blurb">I came across long Twitter threads about the impact of picking up the phone and calling Congress. My friend and I were intrigued. We started looking into how to contact Congress, and we were startled by how little information about it existed. Then we realized that we could do something about that.</p>
+                <p class="portfolio-ccn-blurb">In the weeks following election night, I vowed to get more involved in politics. As I talked with like-minded peers and nodded along as I read rant-filled threads, I started wondering what else I could do besides vote in the next election.</p>
+                <p class="portfolio-ccn-blurb">I came across long Twitter threads about the impact of picking up the phone and calling Congress. My friend and I were intrigued. We started looking into how to contact Congress were startled by how little information about it existed. Then we realized that we could do something about that.</p>
             </div>
         </div>
         <div class="portfolio-ccn-row">
@@ -52,7 +52,8 @@
                 <img class="portfolio-ccn-design-img" src="images/design-ideate.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
-            <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
+                <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following questions:</p>
+                <p class="portfolio-ccn-blurb">What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
             </div>
         </div>
         <div class="portfolio-ccn-row">
