Design process page

--- a/process.html
+++ b/process.html
@@ -5,7 +5,7 @@
 <head>
     <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
     <link href='https://fonts.googleapis.com/css?family=Roboto:400,300,700' rel='stylesheet' type='text/css' />
-    <title>Andrea&rsquo;s Portfolio: Call Congress Now</title>
+    <title>Andrea&rsquo;s Portfolio: Design Process</title>
     <link href="css/reset.css" rel="stylesheet" />
     <link href="css/stylesheet.css" rel="stylesheet" />
     <link rel="icon" type="image/png" href="images/portfolio-icon.png" />
@@ -28,14 +28,17 @@
 
     <section class="portfolio-process-body">
         <h2 class="portfolio-process-title">Design Process</h2>
+        <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with Product, Development, and stakeholders. Although the steps are presented sequentially, I often find that the design process is rarely linear. There can be multiple iterations within a step. Sometimes steps are skipped, or revisited multiple times. It all depends on the nature and goals of the project.</p>
         <div class="portfolio-process-row">
             <img class="portfolio-process-design-img" src="images/design-discover.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Discover</h3>
+                <p class="portfolio-process-blurb">In the first phase, an idea is discovered (i.e., a new app, a new feature, a redesign).</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Find intention:</span> What is the purpose? What is the overall goal?</li>
+                    <li class="portfolio-process-list-item">Write a mission statement</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Market research:</span> Who are our competitors? What makes us different?</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User research:</span> What type of user are we trying to attract? What kind of experience are we trying to optimize?</li>
                 </ul>
             </div>
         </div>
@@ -43,10 +46,12 @@
             <img class="portfolio-process-design-img" src="images/design-ideate.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Define</h3>
+                <p class="portfolio-process-blurb">Next, the idea is defined and given more specific goals.</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Content requirements:</span> List overall content categories</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Technical requirements:</span> Mobile-friendly, required APIs, accessibility, etc.</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User personas:</span> Storyboards for a type of user, user interviews</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">UI requirements:</span> Quick paper/pencil mockups that help define overall layout and organize content</li>
                 </ul>
             </div>
         </div>
@@ -54,10 +59,12 @@
             <img class="portfolio-process-design-img" src="images/design-design.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Design</h3>
+                <p class="portfolio-process-blurb">In the design phase, the nitty-gritty UI elements are ironed out. UX goals are reviewed and modified if needed.</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">High-fidelity mockups</span> via Adobe Illustrator or Sketch</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Interactive prototypes</span> via Invision or HTML/SCSS</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Branding specifics:</span> Color schemes, logo design, content writing style, etc.</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User interaction:</span> Specifics for user flows, transitions, animations, etc.</li>
                 </ul>
             </div>
         </div>
@@ -65,10 +72,12 @@
             <img class="portfolio-process-design-img" src="images/design-develop.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Develop</h3>
+                <p class="portfolio-process-blurb">The prototypes are brought to life on the web and deployed.</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Development:</span> Turn prototype into HTML/SCSS, JS; hook up front-end with back-end</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Testing:</span> Test and debug before release</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Tracking:</span> Set up tracking, a/b tests, etc.</li>
+                    <li class="portfolio-process-list-item">Deploy!</li>
                 </ul>
             </div>
         </div>
@@ -76,13 +85,16 @@
             <img class="portfolio-process-design-img" src="images/design-test.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Test</h3>
+                <p class="portfolio-process-blurb">After deploy, analytics and user feedback are reviewed. Testing will help inform the next steps.</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
-                    <li class="portfolio-process-list-item">Find purpose</li>
+                    <li class="portfolio-process-list-item">Track data from analytics</li>
+                    <li class="portfolio-process-list-item">Track any a/b tests</li>
+                    <li class="portfolio-process-list-item">Seek qualitative user feedback</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Review:</span> What are analytics telling us? What is working or not working?</li>
                 </ul>
             </div>
         </div>
+
     </section>
 
     <footer class="portfolio-footer" id="about">
