--- a/process.html
+++ b/process.html
@@ -27,13 +27,16 @@
     </nav>
 
     <section class="portfolio-process-body">
-        <h2 class="portfolio-process-title">Design Process</h2>
-        <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with Product, Development, and stakeholders. Although the steps are presented sequentially, I often find that the design process is rarely linear. There can be multiple iterations within a step. Sometimes steps are skipped, or revisited multiple times. It all depends on the nature and goals of the project.</p>
+        <div class="portfolio-process-intro">
+            <h2 class="portfolio-process-title">Design Process</h2>
+            <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with stakeholders and Product &amp; Development teams.</p>
+            <p class="portfolio-process-blurb-intro">Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped, or iterated multiple times. It all depends on the nature and goals of the project.</p>
+        </div>
         <div class="portfolio-process-row">
             <img class="portfolio-process-design-img" src="images/design-discover.png" alt="discovery" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Discover</h3>
-                <p class="portfolio-process-blurb">In the first phase, an idea is discovered (i.e., a new app, a new feature, a redesign).</p>
+                <p class="portfolio-process-blurb">In the first phase, an idea is discovered (e.g., a new app, a new feature, a redesign).</p>
                 <ul class="portfolio-process-list">
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Find intention:</span> What is the purpose? What is the overall goal?</li>
                     <li class="portfolio-process-list-item">Write a mission statement</li>
@@ -43,24 +46,25 @@
             </div>
         </div>
         <div class="portfolio-process-row">
-            <img class="portfolio-process-design-img" src="images/design-ideate.png" alt="discovery" />
+            <img class="portfolio-process-design-img" src="images/design-ideate.png" alt="define" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Define</h3>
                 <p class="portfolio-process-blurb">Next, the idea is defined and given more specific goals.</p>
                 <ul class="portfolio-process-list">
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Content requirements:</span> List overall content categories</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Technical requirements:</span> Mobile-friendly, required APIs, accessibility, etc.</li>
-                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User personas:</span> Storyboards for a type of user, user interviews</li>
-                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">UI requirements:</span> Quick paper/pencil mockups that help define overall layout and organize content</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User personas:</span> Storyboards for a type of user or user experience, user interviews</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">UI requirements:</span> Quick paper/pencil wireframes that help define overall layout and organize content</li>
                 </ul>
             </div>
         </div>
         <div class="portfolio-process-row">
-            <img class="portfolio-process-design-img" src="images/design-design.png" alt="discovery" />
+            <img class="portfolio-process-design-img" src="images/design-design.png" alt="design" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Design</h3>
                 <p class="portfolio-process-blurb">In the design phase, the nitty-gritty UI elements are ironed out. UX goals are reviewed and modified if needed.</p>
                 <ul class="portfolio-process-list">
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Wireframes</span> via paper/pencil or Balsamiq</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">High-fidelity mockups</span> via Adobe Illustrator or Sketch</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Interactive prototypes</span> via Invision or HTML/SCSS</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Branding specifics:</span> Color schemes, logo design, content writing style, etc.</li>
@@ -69,12 +73,12 @@
             </div>
         </div>
         <div class="portfolio-process-row">
-            <img class="portfolio-process-design-img" src="images/design-develop.png" alt="discovery" />
+            <img class="portfolio-process-design-img" src="images/design-develop.png" alt="develop" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Develop</h3>
                 <p class="portfolio-process-blurb">The prototypes are brought to life on the web and deployed.</p>
                 <ul class="portfolio-process-list">
-                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Development:</span> Turn prototype into HTML/SCSS, JS; hook up front-end with back-end</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Development:</span> Turn prototype into HTML/SCSS/JS, hook up front-end with back-end</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Testing:</span> Test and debug before release</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Tracking:</span> Set up tracking, a/b tests, etc.</li>
                     <li class="portfolio-process-list-item">Deploy!</li>
@@ -82,15 +86,16 @@
             </div>
         </div>
         <div class="portfolio-process-row">
-            <img class="portfolio-process-design-img" src="images/design-test.png" alt="discovery" />
+            <img class="portfolio-process-design-img" src="images/design-test.png" alt="test" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Test</h3>
-                <p class="portfolio-process-blurb">After deploy, analytics and user feedback are reviewed. Testing will help inform the next steps.</p>
+                <p class="portfolio-process-blurb">After deploy, analytics and user feedback are reviewed. This phase will help inform the next steps (e.g., revisiting a previous step, tweaking a feature).</p>
                 <ul class="portfolio-process-list">
                     <li class="portfolio-process-list-item">Track data from analytics</li>
                     <li class="portfolio-process-list-item">Track any a/b tests</li>
-                    <li class="portfolio-process-list-item">Seek qualitative user feedback</li>
+                    <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">User Research:</span> Seek qualitative user feedback</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Review:</span> What are analytics telling us? What is working or not working?</li>
+                    <li class="portfolio-process-list-item">Brainstorm next steps</li>
                 </ul>
             </div>
         </div>
@@ -100,8 +105,8 @@
     <footer class="portfolio-footer" id="about">
         <section class="portfolio-footer-about">
             <h3 class="portfolio-footer-about-title">ABOUT ANDREA</h3>
-            <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design!</p>
-            <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with an education startup and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
+            <p class="portfolio-footer-about-blurb ">I am a UX/UI Designer in Cambridge, MA. Graffiti alley, picture above, is a beloved place of mine in Central Square. It is always changing, just like design.</p>
+            <p class="portfolio-footer-about-blurb ">I enjoy solving complex design problems and thrive on teamwork. I have experience with education and healthcare startups and have also previously worked in healthcare. My diverse work history gives me a unique perspective on the importance of collaboration and empathy. <a class="portfolio-footer-download-cv" href="https://github.com/andrealeigh/portfolio/raw/master/UX-UI%20Designer%20Resume.pdf">Download my resume</a></p>
         </section>
         <section class="portfolio-footer-contact">
             <div class="portfolio-footer-social-media">
