--- a/process.html
+++ b/process.html
@@ -29,8 +29,8 @@
     <section class="portfolio-process-body">
         <div class="portfolio-process-intro">
             <h2 class="portfolio-process-title">Design Process</h2>
-            <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped or iterated multiple times.</p>
-            <p class="portfolio-process-intro-emphasis">It all depends on the nature and goals of the project.</p>
+            <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with stakeholders and Product &amp; Development teams.</p>
+            <p class="portfolio-process-blurb-intro">Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped, or iterated multiple times. It all depends on the nature and goals of the project.</p>
         </div>
         <div class="portfolio-process-row">
             <img class="portfolio-process-design-img" src="images/design-discover.png" alt="discovery" />
@@ -62,7 +62,7 @@
             <img class="portfolio-process-design-img" src="images/design-design.png" alt="design" />
             <div class="portfolio-process-column">
                 <h3 class="portfolio-process-header">Design</h3>
-                <p class="portfolio-process-blurb">In the design phase, the nitty-gritty UI elements are ironed out. UX goals are reviewed and modified if needed.</p>
+                <p class="portfolio-process-blurb">In the design phase, the nitty-gritty UI elements are ironed out. UX goals are reviewed and groomed.</p>
                 <ul class="portfolio-process-list">
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">Wireframes</span> via paper/pencil or Balsamiq</li>
                     <li class="portfolio-process-list-item"><span class="portfolio-process-list-item-emphasis">High-fidelity mockups</span> via Adobe Illustrator or Sketch</li>
