Minor style updates to design process; major layout changes to CCN page

--- a/ccn.html
+++ b/ccn.html
@@ -27,19 +27,20 @@
     </nav>
 
     <section class="portfolio-ccn-body">
-        <h2 class="portfolio-ccn-title">Call Congress Now: From idea to web application</h2>
-        <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-intro-header">Overview</h3>
+        <div class="portfolio-ccn-intro">
+            <h2 class="portfolio-ccn-title"><span class="portfolio-ccn-title-emphasis">CASE STUDY:</span> Call Congress Now</h2>
             <p class="portfolio-ccn-intro-blurb">Call Congress Now is a responsive web app I designed and co-developed. Its purpose is to encourage citizens to call their Representatives and Senators for issues they care about. The app provides calling information in a user-friendly way. </p>
         </div>
+        <a class="portfolio-ccn-link" href="https://www.callcongressnow.org/" rel="link to Call Congress Now" target="_blank">
+            <img class="portfolio-ccn-screenshot" src="images/ccn-screenshot.png" alt="call congress now" />
+        </a>
         <div class="portfolio-ccn-row">
-            <h3 class="portfolio-ccn-intro-header">The Design Process</h3>
-            <p class="portfolio-ccn-intro-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have outlined my design process below.</p>
+            <h3 class="portfolio-ccn-intro-header">The Design Process: Key Steps</h3>
+            <p class="portfolio-ccn-intro-blurb">Call Congress Now was a challenging but rewarding app to design and build. I have included key points in the design process below.</p>
         </div>
         <div class="portfolio-ccn-row">
             <div class="portfolio-ccn-column">
                 <h3 class="portfolio-ccn-header">Discovery</h3>
-                <img class="portfolio-ccn-design-img" src="images/design-discover.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
                 <p class="portfolio-ccn-blurb">In the weeks following election night, I vowed to get more involved in politics. As I talked with like-minded peers and nodded along as I read rant-filled threads, I started wondering what else I could do besides vote in the next election.</p>
@@ -49,7 +50,6 @@
         <div class="portfolio-ccn-row">
             <div class="portfolio-ccn-column">
                 <h3 class="portfolio-ccn-header">Ideation</h3>
-                <img class="portfolio-ccn-design-img" src="images/design-ideate.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
                 <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following questions:</p>
@@ -59,7 +59,6 @@
         <div class="portfolio-ccn-row">
             <div class="portfolio-ccn-column">
                 <h3 class="portfolio-ccn-header">Design</h3>
-                <img class="portfolio-ccn-design-img" src="images/design-design.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
             <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
@@ -68,7 +67,6 @@
         <div class="portfolio-ccn-row">
             <div class="portfolio-ccn-column">
                 <h3 class="portfolio-ccn-header">Develop</h3>
-                <img class="portfolio-ccn-design-img" src="images/design-develop.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
             <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
@@ -77,7 +75,6 @@
         <div class="portfolio-ccn-row">
             <div class="portfolio-ccn-column">
                 <h3 class="portfolio-ccn-header">Test</h3>
-                <img class="portfolio-ccn-design-img" src="images/design-test.png" alt="discovery" />
             </div>
             <div class="portfolio-ccn-column">
             <p class="portfolio-ccn-blurb">We decided to make a responsive web app that would provide a solution to the following: What would a user-friendly app with calling information look like? And more importantly, how do we motivate our peers to pick up the phone?</p>
