--- a/process.html
+++ b/process.html
@@ -28,7 +28,7 @@
 
     <section class="portfolio-process-body">
         <div class="portfolio-process-intro">
-            <h2 class="portfolio-process-title">Design Process</h2>
+            <h2 class="portfolio-process-title"><span class="portfolio-process-title-emphasis">DESIGN PROCESS:</span> Key Steps</h2>
            <p class="portfolio-process-blurb-intro">The following describes key steps in my design process. It works best when I collaborate closely with others. Although the steps are presented here sequentially, I find that the design process is rarely linear. Sometimes elements in a step are skipped or iterated multiple times.</p>
             <p class="portfolio-process-intro-emphasis">It all depends on the nature and goals of the project.</p>
         </div>
